testsuite/tests/typecheck/should_fail/T9634.stderr

T9634.hs:3:10: error:
    Cannot parse data constructor in a data/newtype declaration:
      1
